--- a/费用调整/order-audit.html
+++ b/费用调整/order-audit.html
@@ -53,17 +53,30 @@
       <div class="flex flex-col md:flex-row gap-4 mb-6">
         <div class="flex-1">
           <label for="feeNumber" class="block text-sm font-medium text-gray-700 mb-1">费用编号</label>
-          <div class="flex">
+          <div class="flex items-center gap-2">
             <input 
               type="text" 
               id="feeNumber" 
-              class="flex-1 px-4 py-2 border border-gray-300 rounded-l-lg input-focus"
+              class="flex-1 px-4 py-2 border border-gray-300 rounded-lg input-focus"
               placeholder="输入费用编号查询（例如：HYNB-240126-0059）"
               value="HYNB-240126-0059"
             >
-            <button id="searchBtn" class="bg-primary text-white px-6 py-2 rounded-r-lg btn-hover">
+            <button id="searchBtn" class="bg-primary text-white px-6 py-2 rounded-lg btn-hover">
               <i class="fas fa-search mr-2"></i>搜索
             </button>
+            <div class="relative">
+              <button id="adjustFeeBtn" class="bg-secondary text-white px-6 py-2 rounded-lg btn-hover flex items-center">
+                <i class="fas fa-cog mr-2"></i>批量操作
+                <i class="fas fa-chevron-down ml-2"></i>
+              </button>
+              <div id="adjustDropdown" class="absolute hidden top-full left-0 mt-1 w-48 bg-white rounded-md shadow-lg border border-gray-200 z-10">
+                <div class="py-1">
+                  <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" data-action="cover">覆盖</a>
+                  <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" data-action="update">更新</a>
+                  <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" data-action="accumulate">累加</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -73,20 +86,6 @@
         <button id="addFeeBtn" class="bg-primary text-white px-6 py-2 rounded-lg btn-hover flex items-center">
           <i class="fas fa-plus mr-2"></i>新增费用项
         </button>
-        
-        <div class="relative">
-          <button id="adjustFeeBtn" class="bg-secondary text-white px-6 py-2 rounded-lg btn-hover flex items-center">
-            <i class="fas fa-cog mr-2"></i>批量操作
-            <i class="fas fa-chevron-down ml-2"></i>
-          </button>
-          <div id="adjustDropdown" class="absolute hidden top-full left-0 mt-1 w-48 bg-white rounded-md shadow-lg border border-gray-200 z-10">
-            <div class="py-1">
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" data-action="cover">覆盖</a>
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" data-action="update">更新</a>
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" data-action="accumulate">累加</a>
-            </div>
-          </div>
-        </div>
       </div>
       
       <!-- 长宽高和体积重信息区域 -->
