--- a/工单/index.html
+++ b/工单/index.html
@@ -333,30 +333,48 @@
             margin-bottom: 8px;
         }
 
-        .chat-input-container {
-            display: flex;
-            gap: 8px;
+        .chat-input-wrapper {
+            position: relative;
         }
 
         .chat-input {
-            flex: 1;
+            width: 100%;
             padding: 8px 12px;
+            padding-right: 90px;
             border: 1px solid #d9d9d9;
             border-radius: 4px;
             font-size: 13px;
             outline: none;
             resize: none;
-            min-height: 60px;
+            min-height: 80px;
         }
 
         .chat-input:focus {
             border-color: #1890ff;
         }
 
+        .send-btn {
+            position: absolute;
+            bottom: 8px;
+            right: 8px;
+            padding: 6px 16px;
+            background: #1890ff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            font-size: 13px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        .send-btn:hover {
+            background: #40a9ff;
+        }
+
         .chat-actions {
             display: flex;
-            flex-direction: column;
             gap: 8px;
+            margin-top: 8px;
         }
 
         .icon-btn {
@@ -379,28 +397,48 @@
             border-color: #1890ff;
         }
 
-        .send-btn {
-            padding: 8px 24px;
-            background: #1890ff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 13px;
-            cursor: pointer;
-            transition: background 0.3s;
-            margin-top: 8px;
-            align-self: flex-end;
-        }
-
-        .send-btn:hover {
-            background: #40a9ff;
-        }
-
         .char-count {
             font-size: 12px;
             color: #999;
             text-align: right;
             margin-top: 4px;
+        }
+
+        /* 底部操作按钮 */
+        .card-actions {
+            display: flex;
+            gap: 12px;
+            padding: 12px 20px;
+            border-top: 1px solid #e8e8e8;
+        }
+
+        .action-btn {
+            flex: 1;
+            padding: 10px 16px;
+            border: none;
+            border-radius: 4px;
+            font-size: 14px;
+            cursor: pointer;
+            transition: all 0.3s;
+            font-weight: 500;
+        }
+
+        .btn-case-close {
+            background: #52c41a;
+            color: white;
+        }
+
+        .btn-case-close:hover {
+            background: #73d13d;
+        }
+
+        .btn-submit-approval {
+            background: #1890ff;
+            color: white;
+        }
+
+        .btn-submit-approval:hover {
+            background: #40a9ff;
         }
 
         /* 弹窗 */
@@ -739,17 +777,22 @@
                 </div>
                 <div class="chat-input-area">
                     <div class="chat-input-hint">输入内容，按Ctrl+Enter发送信息。</div>
-                    <div class="chat-input-container">
+                    <div class="chat-input-wrapper">
                         <textarea class="chat-input" id="chatInput" placeholder="请输入消息内容..." maxlength="500"></textarea>
-                        <div class="chat-actions">
-                            <button class="icon-btn" title="上传图片">📷</button>
-                            <button class="icon-btn" title="上传文件">📎</button>
-                        </div>
+                        <button class="send-btn" onclick="sendMessage()">发送</button>
                     </div>
                     <div class="char-count">
                         <span id="charCount">0</span> / 500
                     </div>
-                    <button class="send-btn" onclick="sendMessage()">发送</button>
+                    <div class="chat-actions">
+                        <button class="icon-btn" title="上传图片">📷</button>
+                        <button class="icon-btn" title="上传文件">📎</button>
+                    </div>
+                </div>
+
+                <div class="card-actions">
+                    <button class="action-btn btn-case-close" onclick="closeCase()">办理结案</button>
+                    <button class="action-btn btn-submit-approval" onclick="openApprovalModal()">提交审批</button>
                 </div>
             </div>
         </div>
@@ -786,6 +829,26 @@
             <div class="modal-footer">
                 <button class="btn-cancel" onclick="closeEditModal()">取消</button>
                 <button class="btn-save" onclick="saveEdit()">保存</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- 审批弹窗 -->
+    <div class="modal" id="approvalModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">提交审批</h3>
+                <button class="close-btn" onclick="closeApprovalModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="form-label">账单月</label>
+                    <input type="month" class="form-input" id="approvalBillingMonth" value="2025-11">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn-cancel" onclick="closeApprovalModal()">取消</button>
+                <button class="btn-save" onclick="submitApproval()">提交</button>
             </div>
         </div>
     </div>
@@ -916,6 +979,44 @@
             chatInput.value = '';
             charCount.textContent = '0';
         }
+
+        // 办理结案
+        function closeCase() {
+            if (confirm('确定要办理结案吗？此操作不可撤销。')) {
+                alert('工单已结案');
+            }
+        }
+
+        // 打开审批弹窗
+        function openApprovalModal() {
+            const modal = document.getElementById('approvalModal');
+            modal.classList.add('show');
+        }
+
+        // 关闭审批弹窗
+        function closeApprovalModal() {
+            const modal = document.getElementById('approvalModal');
+            modal.classList.remove('show');
+        }
+
+        // 提交审批
+        function submitApproval() {
+            const billingMonth = document.getElementById('approvalBillingMonth').value;
+            if (!billingMonth) {
+                alert('请选择账单月');
+                return;
+            }
+
+            alert(`已提交审批，账单月：${billingMonth}`);
+            closeApprovalModal();
+        }
+
+        // 点击审批弹窗外部关闭
+        document.getElementById('approvalModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeApprovalModal();
+            }
+        });
     </script>
 </body>
 </html>
