--- a/出库管理/index.html
+++ b/出库管理/index.html
@@ -522,6 +522,8 @@
                             <th>操作人</th>
                             <th>操作时间</th>
                             <th>内容</th>
+                            <th>操作前状态</th>
+                            <th>操作后状态</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -529,36 +531,50 @@
                             <td>系统自动</td>
                             <td>2025-01-23 09:00:00</td>
                             <td>创建出库订单</td>
+                            <td>-</td>
+                            <td>待审核</td>
                         </tr>
                         <tr>
                             <td>张三</td>
                             <td>2025-01-23 09:15:00</td>
                             <td>审核通过</td>
+                            <td>待审核</td>
+                            <td>待拣货</td>
                         </tr>
                         <tr>
                             <td>李四（仓库管理员）</td>
                             <td>2025-01-23 10:30:00</td>
                             <td>开始拣货</td>
+                            <td>待拣货</td>
+                            <td>拣货中</td>
                         </tr>
                         <tr>
                             <td>李四（仓库管理员）</td>
                             <td>2025-01-23 11:00:00</td>
                             <td>拣货完成</td>
+                            <td>拣货中</td>
+                            <td>待打包</td>
                         </tr>
                         <tr>
                             <td>王五</td>
                             <td>2025-01-23 11:30:00</td>
                             <td>打包完成</td>
+                            <td>待打包</td>
+                            <td>待发货</td>
                         </tr>
                         <tr>
                             <td>系统自动</td>
                             <td>2025-01-23 14:00:00</td>
+                            <td>已发货</td>
+                            <td>待发货</td>
                             <td>已发货</td>
                         </tr>
                         <tr>
                             <td>系统自动</td>
                             <td>2025-01-23 14:05:00</td>
                             <td>生成物流单号: 1234567890</td>
+                            <td>已发货</td>
+                            <td>已发货</td>
                         </tr>
                     </tbody>
                 </table>
