--- a/出库管理/交接班.html
+++ b/出库管理/交接班.html
@@ -52,24 +52,7 @@
 </head>
 <body class="bg-gray-50">
     <!-- 顶部导航栏 -->
-    <header class="bg-white border-b border-gray-200">
-        <div class="px-6 py-4 flex items-center justify-between">
-            <div class="flex items-center gap-8">
-                <div class="text-2xl font-bold text-primary">ELSA</div>
-                <nav class="flex gap-6">
-                    <a href="#" class="text-gray-600 hover:text-primary transition-colors">首页</a>
-                    <a href="#" class="text-primary font-medium">出库管理</a>
-                    <a href="#" class="text-gray-600 hover:text-primary transition-colors">入库管理</a>
-                    <a href="#" class="text-gray-600 hover:text-primary transition-colors">库存管理</a>
-                    <a href="#" class="text-gray-600 hover:text-primary transition-colors">财务管理</a>
-                </nav>
-            </div>
-            <div class="flex items-center gap-4">
-                <span class="text-gray-600">管理员</span>
-                <button class="text-gray-600 hover:text-primary transition-colors">退出</button>
-            </div>
-        </div>
-    </header>
+
 
     <!-- 主内容区 -->
     <div class="max-w-[1600px] mx-auto p-6">
@@ -184,8 +167,8 @@
         <!-- 数据表格卡片 -->
         <div class="bg-white rounded-lg shadow-sm overflow-hidden">
             <!-- 导出按钮区域 -->
-            <div class="px-6 py-4 border-b border-gray-200 flex justify-end">
-                <button class="px-4 py-2 bg-green-500 text-white text-sm rounded-md hover:bg-green-600 transition-colors">导出记录</button>
+            <div class="px-6 py-4 border-b border-gray-200 flex justify-start">
+                <button class="px-4 py-2 bg-green-500 text-white text-sm rounded-md hover:bg-green-600 transition-colors">导出</button>
             </div>
 
             <!-- 数据表格 -->
@@ -199,6 +182,7 @@
                             </th>
                             <th class="px-4 py-3 text-left text-sm font-medium text-gray-600">单号</th>
                             <th class="px-4 py-3 text-left text-sm font-medium text-gray-600">仓库</th>
+                            <th class="px-4 py-3 text-left text-sm font-medium text-gray-600">客户代码</th>
                             <th class="px-4 py-3 text-left text-sm font-medium text-gray-600">SKU及数量</th>
                             <th class="px-4 py-3 text-left text-sm font-medium text-gray-600">状态</th>
                             <th class="px-4 py-3 text-left text-sm font-medium text-gray-600">实际状态</th>
@@ -216,12 +200,13 @@
                                 <input type="checkbox" class="checkbox-custom">
                             </td>
                             <td class="px-4 py-3 text-sm text-gray-800">OUTXIN-251208-00001</td>
-                            <td class="px-4 py-3 text-sm text-gray-600">美国仓库</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">DEMO</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">CUST001</td>
                             <td class="px-4 py-3 text-sm text-gray-600">SKU001 x 2</td>
                             <td class="px-4 py-3">
                                 <span class="px-2 py-1 text-xs rounded-full bg-green-100 text-green-700">已完成</span>
                             </td>
-                            <td class="px-4 py-3 text-sm text-gray-600">已发货</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">待打印面单</td>
                             <td class="px-4 py-3 text-sm text-gray-600">一件代发</td>
                             <td class="px-4 py-3 text-sm text-gray-600">USPS</td>
                             <td class="px-4 py-3 text-sm text-gray-600">Priority Mail</td>
@@ -234,13 +219,14 @@
                                 <input type="checkbox" class="checkbox-custom">
                             </td>
                             <td class="px-4 py-3 text-sm text-gray-800">OUTXIN-251208-00002</td>
-                            <td class="px-4 py-3 text-sm text-gray-600">中国仓库</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">DEMO</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">CUST002</td>
                             <td class="px-4 py-3 text-sm text-gray-600">SKU002 x 5</td>
                             <td class="px-4 py-3">
                                 <span class="px-2 py-1 text-xs rounded-full bg-blue-100 text-blue-700">处理中</span>
                             </td>
-                            <td class="px-4 py-3 text-sm text-gray-600">拣货中</td>
-                            <td class="px-4 py-3 text-sm text-gray-600">存储式中转</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">待打印面单</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">一件代发</td>
                             <td class="px-4 py-3 text-sm text-gray-600">FedEx</td>
                             <td class="px-4 py-3 text-sm text-gray-600">Express</td>
                             <td class="px-4 py-3 text-sm text-gray-600">2025-12-08 11:15</td>
@@ -252,13 +238,14 @@
                                 <input type="checkbox" class="checkbox-custom">
                             </td>
                             <td class="px-4 py-3 text-sm text-gray-800">OUTXIN-251208-00003</td>
-                            <td class="px-4 py-3 text-sm text-gray-600">欧洲仓库</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">DEMO</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">CUST003</td>
                             <td class="px-4 py-3 text-sm text-gray-600">SKU003 x 1</td>
                             <td class="px-4 py-3">
                                 <span class="px-2 py-1 text-xs rounded-full bg-green-100 text-green-700">已完成</span>
                             </td>
-                            <td class="px-4 py-3 text-sm text-gray-600">已发货</td>
-                            <td class="px-4 py-3 text-sm text-gray-600">快转</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">待打印面单</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">一件代发</td>
                             <td class="px-4 py-3 text-sm text-gray-600">DHL</td>
                             <td class="px-4 py-3 text-sm text-gray-600">Standard</td>
                             <td class="px-4 py-3 text-sm text-gray-600">2025-12-08 09:45</td>
@@ -270,12 +257,13 @@
                                 <input type="checkbox" class="checkbox-custom">
                             </td>
                             <td class="px-4 py-3 text-sm text-gray-800">OUTXIN-251208-00004</td>
-                            <td class="px-4 py-3 text-sm text-gray-600">美国仓库</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">DEMO</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">CUST004</td>
                             <td class="px-4 py-3 text-sm text-gray-600">SKU004 x 3</td>
                             <td class="px-4 py-3">
                                 <span class="px-2 py-1 text-xs rounded-full bg-yellow-100 text-yellow-700">待处理</span>
                             </td>
-                            <td class="px-4 py-3 text-sm text-gray-600">待拣货</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">待打印面单</td>
                             <td class="px-4 py-3 text-sm text-gray-600">一件代发</td>
                             <td class="px-4 py-3 text-sm text-gray-600">UPS</td>
                             <td class="px-4 py-3 text-sm text-gray-600">Ground</td>
@@ -288,13 +276,14 @@
                                 <input type="checkbox" class="checkbox-custom">
                             </td>
                             <td class="px-4 py-3 text-sm text-gray-800">OUTXIN-251208-00005</td>
-                            <td class="px-4 py-3 text-sm text-gray-600">中国仓库</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">DEMO</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">CUST005</td>
                             <td class="px-4 py-3 text-sm text-gray-600">SKU005 x 10</td>
                             <td class="px-4 py-3">
                                 <span class="px-2 py-1 text-xs rounded-full bg-green-100 text-green-700">已完成</span>
                             </td>
-                            <td class="px-4 py-3 text-sm text-gray-600">已发货</td>
-                            <td class="px-4 py-3 text-sm text-gray-600">存储式中转</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">待打印面单</td>
+                            <td class="px-4 py-3 text-sm text-gray-600">一件代发</td>
                             <td class="px-4 py-3 text-sm text-gray-600">顺丰</td>
                             <td class="px-4 py-3 text-sm text-gray-600">标准快递</td>
                             <td class="px-4 py-3 text-sm text-gray-600">2025-12-08 08:30</td>
