--- a/出库管理/交接班.html
+++ b/出库管理/交接班.html
@@ -48,6 +48,32 @@
         .table-hover:hover {
             background-color: #f5f5f5;
         }
+
+        /* 状态标签页 */
+        .status-tabs {
+            display: flex;
+            border-bottom: 1px solid #e8e8e8;
+            padding: 0 20px;
+            background: white;
+        }
+
+        .status-tab {
+            padding: 12px 20px;
+            color: #666;
+            cursor: pointer;
+            border-bottom: 2px solid transparent;
+            transition: all 0.3s;
+            font-size: 14px;
+        }
+
+        .status-tab:hover {
+            color: #1890ff;
+        }
+
+        .status-tab.active {
+            color: #1890ff;
+            border-bottom-color: #1890ff;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -162,6 +188,14 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- 状态标签页 -->
+        <div class="status-tabs">
+            <div class="status-tab active" data-status="all">全部</div>
+            <div class="status-tab" data-status="pending">待处理</div>
+            <div class="status-tab" data-status="confirm">待确认</div>
+            <div class="status-tab" data-status="pick">待拣货</div>
         </div>
 
         <!-- 数据表格卡片 -->
@@ -315,6 +349,26 @@
     </div>
 
     <script>
+        // 状态标签页切换功能
+        document.addEventListener('DOMContentLoaded', function() {
+            const statusTabs = document.querySelectorAll('.status-tab');
+
+            statusTabs.forEach(tab => {
+                tab.addEventListener('click', function() {
+                    const targetStatus = this.getAttribute('data-status');
+
+                    // 移除所有active类
+                    statusTabs.forEach(t => t.classList.remove('active'));
+
+                    // 添加active类到当前tab
+                    this.classList.add('active');
+
+                    console.log('切换到状态:', targetStatus);
+                    // 这里可以根据状态筛选数据
+                });
+            });
+        });
+
         // 全选功能
         const selectAllCheckbox = document.querySelector('thead input[type="checkbox"]');
         const rowCheckboxes = document.querySelectorAll('tbody input[type="checkbox"]');
