--- a/对账/index.html
+++ b/对账/index.html
@@ -448,7 +448,7 @@
                 </select>
               </div>
               <div id="conditionCreateTime">
-                <label class="block text-sm font-medium text-gray-700 mb-1">创建时间</label>
+                <label class="block text-sm font-medium text-gray-700 mb-1">创建时间<span class="text-red-500">*</span></label>
                 <div class="space-y-2">
                   <input type="date" id="modalCreateStartDate" class="w-full border border-gray-200 rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-primary/30 bg-white" placeholder="开始日期">
                   <input type="date" id="modalCreateEndDate" class="w-full border border-gray-200 rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-primary/30 bg-white" placeholder="结束日期">
@@ -1071,10 +1071,9 @@
         warehouseCodeEl.style.display = 'block';
         settlementDateEl.style.display = 'block';
       } else if (isCompensationFee) {
-        // 所有赔付类型显示：客户代码、仓库代码、赔付时间
+        // 所有赔付类型显示：客户代码、仓库代码
         customerCodeEl.style.display = 'block';
         warehouseCodeEl.style.display = 'block';
-        compensationTimeEl.style.display = 'block';
       } else if (isRechargeOrAdjust) {
         // 充值和费用调整显示：客户代码、仓库代码、创建时间
         customerCodeEl.style.display = 'block';
