--- a/费用调整/order-audit.html
+++ b/费用调整/order-audit.html
@@ -52,13 +52,13 @@
       <!-- 搜索区域 -->
       <div class="flex flex-col md:flex-row gap-4 mb-6">
         <div class="flex-1">
-          <label for="feeNumber" class="block text-sm font-medium text-gray-700 mb-1">费用编号</label>
+          <label for="feeNumber" class="block text-sm font-medium text-gray-700 mb-1">出库单号</label>
           <div class="flex items-center gap-2">
             <input 
               type="text" 
               id="feeNumber" 
               class="flex-1 px-4 py-2 border border-gray-300 rounded-lg input-focus"
-              placeholder="输入费用编号查询（例如：HYNB-240126-0059）"
+              placeholder="输入出库单号查询（例如：HYNB-240126-0059）"
               value="HYNB-240126-0059"
             >
             <button id="searchBtn" class="bg-primary text-white px-6 py-2 rounded-lg btn-hover">
