--- a/排柜计划/warehouse-dashboard.html
+++ b/排柜计划/warehouse-dashboard.html
@@ -325,6 +325,193 @@
       </div>
     </div>
 
+    <!-- 仓库KPI指标区域 -->
+    <div class="bg-white rounded-xl p-4 md:p-6 card-shadow fade-in mb-6">
+      <h2 class="text-lg font-semibold text-gray-800 mb-4 flex items-center gap-2">
+        <i class="fas fa-chart-bar text-blue-600"></i>
+        仓库涉及部分指标
+      </h2>
+
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+        <!-- 入库管理 -->
+        <div class="border border-gray-200 rounded-lg p-4">
+          <h3 class="text-md font-semibold text-gray-700 mb-3 flex items-center gap-2">
+            <i class="fas fa-sign-in-alt text-green-600"></i>
+            入库管理
+          </h3>
+          <div class="space-y-3">
+            <div class="flex items-center justify-between">
+              <div class="flex-1">
+                <div class="flex items-center justify-between mb-1">
+                  <span class="text-sm text-gray-600">预约确认及时性</span>
+                  <span class="text-xs font-semibold text-green-600">目标 ≥95%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2">
+                  <div class="progress-bar bg-gradient-to-r from-green-400 to-green-600 h-2 rounded-full" style="width: 97%"></div>
+                </div>
+                <div class="flex justify-between mt-1">
+                  <span class="text-xs text-gray-500">当前: 97%</span>
+                  <span class="badge badge-success text-xs">达标</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex items-center justify-between">
+              <div class="flex-1">
+                <div class="flex items-center justify-between mb-1">
+                  <span class="text-sm text-gray-600">标记到仓及时性</span>
+                  <span class="text-xs font-semibold text-green-600">目标 ≥95%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2">
+                  <div class="progress-bar bg-gradient-to-r from-green-400 to-green-600 h-2 rounded-full" style="width: 96%"></div>
+                </div>
+                <div class="flex justify-between mt-1">
+                  <span class="text-xs text-gray-500">当前: 96%</span>
+                  <span class="badge badge-success text-xs">达标</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex items-center justify-between">
+              <div class="flex-1">
+                <div class="flex items-center justify-between mb-1">
+                  <span class="text-sm text-gray-600">报空及时性</span>
+                  <span class="text-xs font-semibold text-green-600">目标 ≥98%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2">
+                  <div class="progress-bar bg-gradient-to-r from-green-400 to-green-600 h-2 rounded-full" style="width: 99%"></div>
+                </div>
+                <div class="flex justify-between mt-1">
+                  <span class="text-xs text-gray-500">当前: 99%</span>
+                  <span class="badge badge-success text-xs">达标</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex items-center justify-between">
+              <div class="flex-1">
+                <div class="flex items-center justify-between mb-1">
+                  <span class="text-sm text-gray-600">上架及时性</span>
+                  <span class="text-xs font-semibold text-green-600">目标 ≥98%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2">
+                  <div class="progress-bar bg-gradient-to-r from-yellow-400 to-yellow-600 h-2 rounded-full" style="width: 94%"></div>
+                </div>
+                <div class="flex justify-between mt-1">
+                  <span class="text-xs text-gray-500">当前: 94%</span>
+                  <span class="badge badge-warning text-xs">待改进</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 库存库位管理 -->
+        <div class="border border-gray-200 rounded-lg p-4">
+          <h3 class="text-md font-semibold text-gray-700 mb-3 flex items-center gap-2">
+            <i class="fas fa-boxes text-purple-600"></i>
+            库存库位管理
+          </h3>
+          <div class="space-y-3">
+            <div class="flex items-center justify-between">
+              <div class="flex-1">
+                <div class="flex items-center justify-between mb-1">
+                  <span class="text-sm text-gray-600">订单拦截率</span>
+                  <span class="text-xs font-semibold text-green-600">目标 ≤0.01%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2">
+                  <div class="progress-bar bg-gradient-to-r from-green-400 to-green-600 h-2 rounded-full" style="width: 5%"></div>
+                </div>
+                <div class="flex justify-between mt-1">
+                  <span class="text-xs text-gray-500">当前: 0.005%</span>
+                  <span class="badge badge-success text-xs">达标</span>
+                </div>
+              </div>
+            </div>
+            <div class="bg-blue-50 border border-blue-200 rounded-lg p-3 mt-3">
+              <p class="text-xs text-gray-600 leading-relaxed">
+                <i class="fas fa-info-circle text-blue-500 mr-1"></i>
+                订单拦截是指：
+              </p>
+              <ul class="text-xs text-gray-600 mt-2 space-y-1 ml-4">
+                <li>a. 订单下架后24小时内没有找到，导致客户拦截</li>
+                <li>b. 拣操作过程中发现货物不到，系统库存调0的数量</li>
+                <li>c. 盘点过程中盘亏，系统库存调0的数量</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- 发货管理 -->
+        <div class="border border-gray-200 rounded-lg p-4">
+          <h3 class="text-md font-semibold text-gray-700 mb-3 flex items-center gap-2">
+            <i class="fas fa-shipping-fast text-blue-600"></i>
+            发货管理
+          </h3>
+          <div class="space-y-3">
+            <div class="flex items-center justify-between">
+              <div class="flex-1">
+                <div class="flex items-center justify-between mb-1">
+                  <span class="text-sm text-gray-600">货物出库准确率</span>
+                  <span class="text-xs font-semibold text-green-600">目标 ≥99.99%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2">
+                  <div class="progress-bar bg-gradient-to-r from-green-400 to-green-600 h-2 rounded-full" style="width: 99.99%"></div>
+                </div>
+                <div class="flex justify-between mt-1">
+                  <span class="text-xs text-gray-500">当前: 99.99%</span>
+                  <span class="badge badge-success text-xs">达标</span>
+                </div>
+              </div>
+            </div>
+            <div class="bg-green-50 border border-green-200 rounded-lg p-3 mt-3">
+              <p class="text-xs text-gray-600 leading-relaxed">
+                <i class="fas fa-check-circle text-green-500 mr-1"></i>
+                发货准确率 = 1 - 期内错发单数/期内总发单数 × 100%
+              </p>
+              <p class="text-xs text-gray-500 mt-1">
+                错发包括：相客户订单、准确出库、无错装、少发、多发
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 退货管理 -->
+        <div class="border border-gray-200 rounded-lg p-4">
+          <h3 class="text-md font-semibold text-gray-700 mb-3 flex items-center gap-2">
+            <i class="fas fa-undo text-orange-600"></i>
+            退货管理
+          </h3>
+          <div class="space-y-3">
+            <div class="flex items-center justify-between">
+              <div class="flex-1">
+                <div class="flex items-center justify-between mb-1">
+                  <span class="text-sm text-gray-600">退货处理及时率</span>
+                  <span class="text-xs font-semibold text-green-600">目标 ≥90%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2">
+                  <div class="progress-bar bg-gradient-to-r from-green-400 to-green-600 h-2 rounded-full" style="width: 92%"></div>
+                </div>
+                <div class="flex justify-between mt-1">
+                  <span class="text-xs text-gray-500">当前: 92%</span>
+                  <span class="badge badge-success text-xs">达标</span>
+                </div>
+              </div>
+            </div>
+            <div class="bg-orange-50 border border-orange-200 rounded-lg p-3 mt-3">
+              <p class="text-xs text-gray-600 leading-relaxed">
+                <i class="fas fa-clock text-orange-500 mr-1"></i>
+                退货扫描及时率 (≤7工作日) ≥90%
+              </p>
+              <p class="text-xs text-gray-500 mt-1">
+                退货处理及时率 = (期内 ≤7工作日完成扫描的退货包裹数 / 期内接收的退货包裹总数) × 100%
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- 主要内容区域 -->
     <!-- 表格区域：独占一行 -->
     <div class="bg-white rounded-xl p-4 md:p-6 card-shadow fade-in mb-6">
