--- a/对账/index.html
+++ b/对账/index.html
@@ -372,13 +372,13 @@
               </div>
             </div>
             <!-- 出库单号搜索 -->
-            <div id="listOutboundNoSearch" class="hidden flex items-center gap-2">
+            <!-- <div id="listOutboundNoSearch" class="hidden flex items-center gap-2">
               <label class="text-sm font-medium text-gray-700">出库单号：</label>
               <input type="text" id="modalListOutboundNo" class="w-64 border border-gray-200 rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-primary/30 bg-white" placeholder="请输入出库单号">
               <button id="modalListSearchBtn" class="px-4 py-2 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-colors">
                 <i class="fa fa-search mr-1"></i>搜索
               </button>
-            </div>
+            </div> -->
           </div>
           
           <!-- 费用列表内容 -->
