refactor: 注释掉费用列表区域的出库单号搜索功能

--- a/对账/index.html
+++ b/对账/index.html
@@ -635,9 +635,9 @@
       document.getElementById('modalSearch').addEventListener('click', searchModalData);
       document.getElementById('modalReset').addEventListener('click', resetModalForm);
 
-      // 费用列表区域的出库单号搜索
-      document.getElementById('modalListSearchBtn').addEventListener('click', searchByOutboundNo);
-      
+      // 费用列表区域的出库单号搜索（已注释，暂不启用）
+      // document.getElementById('modalListSearchBtn').addEventListener('click', searchByOutboundNo);
+
       // 账单类型变化时更新表头和检索条件
       document.getElementById('modalBillType').addEventListener('change', function() {
         updateModalTableHeader();
